added html, css, js

--- a/calc.html
+++ b/calc.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<title>Page Title</title>
+<title>CALCULATOR</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="./style.css">
 <style>
 </style>
-<script src=""></script>
 <body>
 
-<img src="img_la.jpg" alt="LA" style="width:100%">
-
-<div class="">
- <h1>This is a Heading</h1>
- <p>This is a paragraph.</p>
- <p>This is another paragraph.</p>
+<div class="calculator">
+    <div class="input-container">
+        <p class="input"></p>
+    </div>
+    <div class="button-container">
+        <div class="row">
+            <button class="operator-clear">C</button>
+            <button class="operator-delete">&lt;-</button>
+            <button class="operator-divide">/</button>
+        </div>
+        <div class="row">
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button class="operator-multiply">X</button>            
+        </div>
+        <div class="row">
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button class="operator-subtract">-</button>              
+        </div>
+        <div class="row">
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="operator-add">+</button>  
+        </div>
+        <div class="row">
+            <button class="number">0</button>
+            <button class="operator-equals">=</button> 
+        </div>
+    </div>
 </div>
 
 </body>
+<script src="./javascript.js"></script>
 </html>
